<resources>
    <string name="app_name">cars</string>
    <string name="topic">Cars Park</string>
    <string name="button_emty1">Emty</string>
    <string name="button_emty2">Emty</string>
    <string name="button_emty3">Emty</string>
    <string name="name_text">Name</string>
    <string name="brand_text">Brand</string>
    <string name="license_text">License</string>
    <string name="what_is_your_name">What is your Name?</string>
    <string name="what_is_you_brand_car">What is your Brand car?</string>
    <string name="what_is_your_license_plate">What is your License plate?</string>
    <string name="submit_button">Submit</string>
    <string name="delete_button">Delete</string>
    <string name="submit_button2">Submit</string>
    <string name="delete_button2">Delete</string>
    <string name="submit_button3">Submit</string>
    <string name="delete_button3">Delete</string>
    <string name="name_textView1">Name</string>
    <string name="brand_textView1">Brand</string>
    <string name="license_textView1">License</string>
    <string name="back_button1">Back</string>
    <string name="delete_button4">Delete</string>
    <string name="license_edit">Emty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">login</string>
</resources>
